@@ -15,13 +15,14 @@ import uk.gov.hmcts.reform.civil.model.common.Element;
 import uk.gov.hmcts.reform.civil.model.documents.CaseDocument;
 import uk.gov.hmcts.reform.civil.service.docmosis.dq.DirectionsQuestionnaireGenerator;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
+import static uk.gov.hmcts.reform.civil.callback.CallbackVersion.V_1;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.GENERATE_DIRECTIONS_QUESTIONNAIRE;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.GENERATE_DIRECTIONS_QUESTIONNAIRE_SPEC;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
@@ -30,14 +31,20 @@ import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 @RequiredArgsConstructor
 public class GenerateDirectionsQuestionnaireCallbackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_DIRECTIONS_QUESTIONNAIRE);
+    private static final List<CaseEvent> EVENTS = List.of(
+        GENERATE_DIRECTIONS_QUESTIONNAIRE,
+        GENERATE_DIRECTIONS_QUESTIONNAIRE_SPEC
+    );
 
     private final DirectionsQuestionnaireGenerator directionsQuestionnaireGenerator;
     private final ObjectMapper objectMapper;
 
     @Override
     protected Map<String, Callback> callbacks() {
-        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::prepareDirectionsQuestionnaire);
+        return Map.of(
+            callbackKey(V_1, ABOUT_TO_SUBMIT), this::prepareDirectionsQuestionnaireV1,
+            callbackKey(ABOUT_TO_SUBMIT), this::prepareDirectionsQuestionnaire
+        );
     }
 
     @Override
@@ -46,6 +53,73 @@ public class GenerateDirectionsQuestionnaireCallbackHandler extends CallbackHand
     }
 
     private CallbackResponse prepareDirectionsQuestionnaire(CallbackParams callbackParams) {
+        CaseData caseData = callbackParams.getCaseData();
+        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
+
+        if (respondent2HasSameLegalRep(caseData) && NO == caseData.getRespondentResponseIsSame()) {
+            if (isDefendant1DQResponse(caseData)) {
+                generateAndSet1V2SameSolDivergentResponsesDQ(callbackParams, caseData, caseDataBuilder, "ONE");
+            }
+
+            if (isDefendant2DQResponse(caseData)) {
+                generateAndSet1V2SameSolDivergentResponsesDQ(callbackParams, caseData, caseDataBuilder, "TWO");
+            }
+        } else {
+            generateAndSetDQ(callbackParams, caseData, caseDataBuilder);
+        }
+
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .data(caseDataBuilder.build().toMap(objectMapper))
+            .build();
+    }
+
+    private void generateAndSetDQ(CallbackParams callbackParams, CaseData caseData,
+                                  CaseData.CaseDataBuilder caseDataBuilder) {
+        CaseDocument directionsQuestionnaire = directionsQuestionnaireGenerator.generate(
+            caseData,
+            callbackParams.getParams().get(BEARER_TOKEN).toString()
+        );
+
+        List<Element<CaseDocument>> systemGeneratedCaseDocuments = caseData.getSystemGeneratedCaseDocuments();
+        systemGeneratedCaseDocuments.add(element(directionsQuestionnaire));
+        caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
+    }
+
+    private boolean isDefendant2DQResponse(CaseData caseData) {
+        return caseData.getRespondent2DQ() != null
+            && RespondentResponseType.FULL_DEFENCE.equals(caseData.getRespondent2ClaimResponseType());
+    }
+
+    private boolean isDefendant1DQResponse(CaseData caseData) {
+        return caseData.getRespondent1DQ() != null
+            && RespondentResponseType.FULL_DEFENCE.equals(caseData.getRespondent1ClaimResponseType());
+    }
+
+    private void generateAndSet1V2SameSolDivergentResponsesDQ(CallbackParams callbackParams, CaseData caseData,
+                                                              CaseData.CaseDataBuilder caseDataBuilder,
+                                                              String defendantIdentifier) {
+        CaseDocument directionsQuestionnaire =
+            directionsQuestionnaireGenerator.generateDQFor1v2SingleSolDiffResponse(
+            caseData,
+            callbackParams.getParams().get(BEARER_TOKEN).toString(),
+            defendantIdentifier
+        );
+
+        List<Element<CaseDocument>> systemGeneratedCaseDocuments =
+            caseData.getSystemGeneratedCaseDocuments();
+        systemGeneratedCaseDocuments.add(element(directionsQuestionnaire));
+        caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
+    }
+
+    /**
+     * Next version for prepareDirectionsQuestionnaire. The main difference is storing the generated document
+     * not only in the generated documents list but also in respondent1GeneratedResponseDocument, so we can use
+     * easily locate it in intention to proceed journey.
+     *
+     * @param callbackParams parameters of the callback
+     * @return response of the callback
+     */
+    private CallbackResponse prepareDirectionsQuestionnaireV1(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
 
